# freeipa

./: .bzrignore  .freeipa-pr-ci.yaml  .git-commit-template  .gitignore  .gitignorerevs  .gitmodules  .hgtags  .lgtm.yml  .mailmap  .readthedocs.yaml  .sourcery.yaml  .test_runner_config.yaml  .test_runner_config_py3_temp.yaml  .tox-install.sh  .travis.upload.key.enc  .travis.yml  .travis_run_task.sh  .wheelconstraints.in  1-server-install.rst  10-ssh-key-management.rst  11-kerberos-ticket-policy.rst  2-client-install.rst  3-user-management.rst  4-hbac.rst  5-web-app-authnz.rst  6-cert-management.rst  7-replica-install.rst  8-sudorule.rst  9-selinux-user-map.rst  ACI.txt  API.txt  BUILD.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING.openssl  Contributors.txt  DO_NOT_MERGE  MANIFEST.in  Makefile  Makefile.am  (+60 more)
asn1/: Makefile.am  README  configure.ac  ipa_asn1.c  ipa_asn1.h
asn1/asn1c/: GKCurrentKeys.c  GKCurrentKeys.h  GKNewKeys.c  GKNewKeys.h  GKReply.c  GKReply.h  GetKeytabControl.c  GetKeytabControl.h  Int32.c  Int32.h  KrbKey.c  KrbKey.h  Makefile.am  OCTET_STRING.c  TypeValuePair.c  TypeValuePair.h  asn_system.h  constr_CHOICE.c  constr_SET_OF.c  constr_SET_OF_oer.c  der_encoder.c  ipa.asn1  per_support.c
client/: Makefile.am  certbot-dns-ipa.in  config.c  configure.ac  ipa-certupdate  ipa-certupdate.in  ipa-client-automount  ipa-client-automount.in  ipa-client-common.h  ipa-client-install  ipa-client-install.in  ipa-client-nfsexport  ipa-client-samba.in  ipa-epn.in  ipa-getkeytab.c  ipa-join.c  ipa-rmkeytab.c
client/man/: Makefile.am  default.conf.5  epn.conf.5  ipa-certupdate.1  ipa-client-automount.1  ipa-client-install.1  ipa-client-samba.1  ipa-epn.1  ipa-getkeytab.1  ipa-join.1  ipa-rmkeytab.1  ipa.1
client/share/: Makefile.am  epn.conf  expire_msg.template  freeipa-realm.template  ssh_ipa.conf.template  unbound.conf.template
client/sysconfig/: Makefile.am  certmonger
client/systemd/: Makefile.am  ipa-epn.service.in
contrib/RHEL4/: Makefile.am  configure.ac  ipa-client-setup  ipa-client.spec  ipachangeconf.py  setup.py
daemons/: Makefile.am  autogen.sh  configure.ac  ipa-version.h.in
daemons/dnssec/: Makefile.am  ipa-dnskeysync-replica  ipa-dnskeysync-replica.in  ipa-dnskeysyncd  ipa-dnskeysyncd.in  ipa-dnskeysyncd.service  ipa-dnskeysyncd.service.in  ipa-ods-exporter  ipa-ods-exporter.in  ipa-ods-exporter.service  ipa-ods-exporter.service.in  ipa-ods-exporter.socket  ipa-ods-exporter.socket.in
daemons/ipa-kdb/: Makefile.am  README  README.s4u2proxy.txt  ipa-certauth  ipa-certauth.in  ipa-print-pac.c  ipa_kdb.c  ipa_kdb.exports  ipa_kdb.h  ipa_kdb_audit_as.c  ipa_kdb_certauth.c  ipa_kdb_common.c  ipa_kdb_delegation.c  ipa_kdb_kdcpolicy.c  ipa_kdb_mkey.c  ipa_kdb_mspac.c  ipa_kdb_mspac_private.h  ipa_kdb_mspac_v6.c  ipa_kdb_mspac_v9.c  ipa_kdb_passwords.c  ipa_kdb_principals.c  ipa_kdb_pwdpolicy.c  ipa_kdb_s4u_x509.c
daemons/ipa-kpasswd/: Makefile.am  README  ipa_kpasswd.c  ipa_kpasswd.init
daemons/ipa-otpd/: Makefile.am  bind.c  forward.c  internal.h  ipa-otpd.socket.in  ipa-otpd@.service.in  ipa_otpd_queue_cmocka_tests.c  main.c  oauth2.c  parse.c  passkey.c  query.c  queue.c  stdio.c  test.py
daemons/ipa-sam/: Makefile.am  README  ipa_sam.c  ipa_sam.h
daemons/ipa-slapi-plugins/: Makefile.am
init/: Makefile.am  ipa_memcached.conf  ipa_memcached.in
init/SystemV/: ipa_memcached.init
init/systemd/: Makefile.am  freeipa-systemd-upgrade  httpd.service  ipa-ccache-sweep.service.in  ipa-ccache-sweep.timer.in  ipa-custodia.service  ipa-custodia.service.in  ipa-epn.timer.in  ipa-keytab-cleaner@.service.in  ipa-named-pkcs11.service.in  ipa.catalog  ipa.conf.tmpfiles  ipa.service  ipa.service.in  ipa_kpasswd.service  ipa_memcached.service  ipa_memcached.service.in
init/sysusersd/: Makefile.am  ipa.conf.in
init/tmpfilesd/: Makefile.am  ipa-dnssec.conf.in  ipa-ipacta.conf.in  ipa-ipathinca.conf.in  ipa-pki-tomcat.conf.in  ipa.conf.in  ipaclient.conf.in
install/: Makefile.am  README.schema  configure.ac
install/certmonger/: Makefile.am  dogtag-ipa-ca-renew-agent-submit  dogtag-ipa-ca-renew-agent-submit.in  dogtag-ipa-retrieve-agent-submit  ipa-server-guard  ipa-server-guard.in  renew_ca_cert
install/conf/: Makefile.am  ca_renewal  ipa-kdc-proxy.conf.template  ipa-pki-proxy.conf  ipa-rewrite.conf  ipa.conf
install/custodia/: Makefile.am  ipa-custodia-dmldap.in  ipa-custodia-pki-tomcat-wrapped.in  ipa-custodia-pki-tomcat.in  ipa-custodia-ra-agent.in
install/ffextension/: Makefile.am  bootstrap.js  chrome.manifest  install.rdf
install/gc/: Makefile.am  convert-schema
ipa-client/: .hgignore  Makefile  Makefile.am  README  autogen.sh  config.c  configure.ac  freeipa-client.spec  freeipa-client.spec.in  ipa-client-common.c  ipa-client-common.h  ipa-client.spec  ipa-client.spec.in  ipa-getkeytab.c  ipa-join.c  ipa-rmkeytab.c
ipa-server/: .hgignore  Makefile  Makefile.am  Makefile.common  README  autogen.sh  configure.ac  freeipa-server.spec  freeipa-server.spec.in  ipa-compat-manage  ipa-fix-CVE-2008-3274  ipa-ldap-updater  ipa-server.spec  ipa-server.spec.in  ipa-upgradeconfig  version.m4.in
ipapython/: MANIFEST.in  Makefile  Makefile.am  README  admintool.py  certdb.py  certmonger.py  compat.py  config.py  cookie.py  directivesetter.py  dn.py  dn_ctypes.py  dnsclient.py  dnsutil.py  dogtag.py  entity.py  errors.py  fqdn.py  graph.py  ipa_log_manager.py  ipachangeconf.py  ipaldap.py  ipasslfile.py  ipautil.py  kerberos.py  kernel_keyring.py  krb5util.py  log_manager.py  nsslib.py  ntpmethods.py  p11helper.py  pgp.py  radius_util.py  services.py.in  session_storage.py  setup.py  setup.py.in  ssh.py  sysrestore.py  (+3 more)
selinux/: Makefile  Makefile.am  README.md  ipa-server-selinux.spec.in  ipa.fc  ipa.if  ipa.te
smartproxy/: Makefile.am  configure.ac  ipa-smartproxy-apache.conf  ipa-smartproxy.conf  ipa-smartproxy.logrotate  ipa-smartproxy.py  ipa-smartproxy.service
util/: Makefile.am  ipa_hostname.c  ipa_hostname.h  ipa_krb5.c  ipa_krb5.h  ipa_ldap.c  ipa_ldap.h  ipa_mspac.h  ipa_pwd.c  ipa_pwd.h  ipa_pwd_ntlm.c  t_policy.c  t_pwd.c
(+4588 files in other folders)
